# proc-macro-workshop

builder/: Cargo.toml
builder/derive_builder/: Cargo.toml
builder/derive_builder/src/: lib.rs
builder/src/: lib.rs
builder/tests/: 08-unrecognized-attribute.stderr
debug/: Cargo.toml
debug/derive_debug/: Cargo.toml
debug/derive_debug/src/: lib.rs
debug/src/: lib.rs  main.rs
