[package]
name = "builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[workspace]
members = [
    "derive_builder"
]

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
derive_builder = { path = "./derive_builder" }
# TODO
