[package]
name = "debug"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[workspace]
members = [
    "./derive_debug"
]

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
derive_debug = { path = "./derive_debug" }
